--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -85,7 +85,7 @@
     <string name="firstDayOfCycle">Первый день цикла</string>
     <string name="statisticRemark">
 <![CDATA[
-<i>Примечание.</i> В таблице учитываются данные по всем циклам, кроме последнего (по всем полным циклам).<br/>
+<i>Примечание.</i> В таблице учитываются данные по всем циклам, кроме последнего (т.е. по всем полным циклам).<br/>
 Расчет средней, максимальной и минимальной продолжительностей менструального цикла ведется только по  циклам, не превышающим %1$s дней.<br/>
 Продолжительность циклов, превышающая %2$s дней, в таблице выделяется красным.
 ]]>
