--- a/WomanCyc/res/values/strings.xml
+++ b/WomanCyc/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="widget_small_name">WomanCyc Small</string>
     <string name="widget_medium_name">WomanCyc Medium</string>
     <string name="settings">Settings</string>
-    <string name="clearAllData">Reset data</string>
+    <string name="clearAllData">Clear data</string>
     <string name="thereIsNoData">No data</string>
     <string name="clearAllDataConfirmation">Delete all data?</string>
     <string name="clearAllDataConfirmationMessage">Data will be permanently deleted. Save current data to file, if necessary.</string>
