--- a/WomanCyc/res/values-ru/strings.xml
+++ b/WomanCyc/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="sendto_app_not_available">Приложение \"Почтовый клиент\" недоступно</string>
+    <string name="sendto_app_not_available">Почтовый клиент недоступен</string>
     <string name="market_app_not_available">Приложение market недоступно</string>
     <string name="days">д.</string>
     <string name="isSet">Установлен</string>
